<resources>
    <string name="app_name" translatable="false">MyQuotesApp</string>

    <string name="get_quotations">Get quotations</string>
    <string name="favourite_quotations">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="action_bar_quotation_shake">Quotation Shake</string>
    <string name="action_bar_favourite_quotations">Favourite quotations</string>
    <string name="action_bar_random_quotations">Random quotations</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_about">About</string>

    <string name="about_text_view_1">Quotation Shake by\n\nJose\nGinés\njomona6@inf.upv.es\ngigarma@inf.upv.es\n\nDeveloped for DADM 2022</string>

    <!-- <string name="settings_text_view_1">Name that identifies the user</string>
    <string name="settings_edit_text_1">Insert your name</string>
    <string name="settings_text_view_2">Get quotations in the selected language</string>
    <string name="settings_text_view_3">Request quotations using the selected HTTP method</string>
    <string name="settings_radio_get" translatable="false">GET</string>
    <string name="settings_radio_post" translatable="false">POST</string> -->

    <string name="settings_username">User name</string>
    <string name="settings_obtaining_quotations">Obtaining quotations</string>
    <string name="settings_quotations_language">Quotations language</string>
    <string name="settings_http_requests">HTTP requests</string>
    <string name="settings_radio_get" translatable="false">GET</string>
    <string name="settings_radio_post" translatable="false">POST</string>

    <string name="favourite_text_view_1">Author info</string>
    <string name="favourite_snack_bar_deleted">Quotation deleted</string>
    <string name="favourite_snack_bar">Action not possible</string>
    <string name="favourite_snack_bar_undo">Undo</string>

    <string name="quotation_text_view_1">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="quotation_text_view_2">Sample quotation %1$d</string>
    <string name="quotation_text_view_3">Sample author %1$d</string>

    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>

    <string name="favourite_dialog_message">Are you sure that you want to delete this quotation?</string>
    <string name="favourite_dialog_message_all">Are you sure that you want to delete all quotations?</string>
    <string name="favourite_dialog_yes">Yes</string>
    <string name="favourite_dialog_no">No</string>

    <string name="quotation_activity_action_bar_add">Add</string>
    <string name="quotation_activity_action_bar_refresh">Refresh</string>

    <string name="favourite_activity_action_bar_clear_all">Clear All</string>

    <string name="quotation_activity_toast_no_quote">It was not possible to get a new quotation</string>
    <string name="quotation_activity_toast_no_connection">Without connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>